syntax = "proto3";

package wishlist;

option go_package = "pb/wishlist";

service wishlistService{
    rpc AddToWishlist(AddToWishlistRequest)returns(AddToWishlistResponse);
    rpc RemoveFromWishlist(RemoveFromWishlistRequest)returns (RemoveFromeWishlistResponse);
    rpc ViewWishlist(ViewWishlistRequset)returns(ViewWishlistResponse);
}

message Wishlist{
    uint32 id = 1;
    uint32 userID = 2;
    uint32 productID = 3;
}

message AddToWishlistRequest{
    uint32 userID = 1;
    uint32 productID = 2;
}

message AddToWishlistResponse{
    uint32 id = 1;
    string status = 2;
}

message RemoveFromWishlistRequest{
    uint32 userID = 1;
    uint32 id = 2;
}

message RemoveFromeWishlistResponse{
    uint32 id = 1;
    string status = 2;
}

message ViewWishlistRequset{
    uint32 userID  = 1;
}

message ViewWishlistResponse{
    repeated Wishlist wishlists = 1;
}